# PixelEdit

./: .projectile  CMakeLists.txt
src/: input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  state.cpp  state.h
